--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
 <h1> This is our contact details </h1>
 <h2> Phone Number: 6253725102 </h2>
-<h2> Email: name@email.com </h2>
+<h2> Email: name1@email.com </h2>
+<h2> X: name1@email.com </h2>
